--- a/style.css
+++ b/style.css
@@ -4,6 +4,23 @@ body {
     background-color: #000;
 }
 
+h2 {
+    font-size: 2rem;
+    color: #33A8DB;
+    font-weight: bold;
+    letter-spacing: 0.25rem;
+    text-transform: uppercase;
+    margin-bottom: 1.5rem;
+}
+
+p {
+    color: white;
+}
+
+section {
+    margin: 6.25rem auto;
+}
+
 .banner {
     background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url('./assets/images/banner.png');
     background-size: cover;
@@ -12,6 +29,7 @@ body {
     padding-top: 3.75rem;
     border-bottom: 0.063rem solid #33A8DB80;
 }
+
 .banner-content {
     display: flex;
     flex-direction: column;
@@ -21,7 +39,7 @@ body {
 }
 
 .banner-content h1 {
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: 900;
     background: linear-gradient(180deg, #33A8DB 0%, #1472B7 100%);
     background-clip: text;
@@ -34,18 +52,17 @@ body {
 .banner-content p {
     color: #FFF;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: 400;
-    width: 510px;
 }
 
 .banner-content button {
-    padding: 19px 91px;
-    border: 2px solid #3BA1CD;
+    padding: 1.188rem 5.688rem;
+    border: 0.125rem solid #3BA1CD;
     color: #31A8DD;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 900;
-    letter-spacing: 3.36px;
+    letter-spacing: 0.21rem;
     text-align: center;
     background-color: transparent;
     background-image: linear-gradient(rgba(49, 168, 221, 1));
@@ -61,3 +78,67 @@ body {
     padding: 0.75rem;
 }
 
+#course-content {
+    width: 50rem;
+    text-align: center;
+}
+
+#course-content .modules-list {
+    margin: 1.5rem 0
+}
+
+#course-content .modules-list .module {
+    border-radius: 57px;
+    border: 1px solid #33A8DB;
+    background: #252525;
+    box-shadow: -2px 6px 4px 0px rgba(0, 0, 0, 0.40) inset;
+    padding: 16px;
+    margin-bottom: 24px;
+    color: #FFF;
+}
+
+#course-content .modules-list .module span {
+    color: #33A8DB;
+}
+
+#transform-world {
+    background-image: url('./assets/images/woman-code.png');
+    background-attachment: fixed;
+    background-size: cover;
+    height: 560px;
+    border-top: 1px solid #33A8DB80;
+    border-bottom: 1px solid #33A8DB80;
+    padding: 200px;
+}
+
+#transform-world p {
+    text-shadow: 3px 2px 0px #33A8DB;
+    font-size: 40px;
+    font-weight: 900;
+    text-transform: lowercase;
+    max-width: 250px;
+}
+
+#professional-challenges {
+    text-align: center;
+    height: 800px;
+}
+
+#professional-challenges img {
+    margin: 32px 0;
+}
+
+footer {
+    border-top: 1px solid #33A8DB;
+    background-image: linear-gradient(180deg, rgba(51, 168, 219, 0.00), rgba(51, 168, 219, 0.20), rgba(51, 168, 219, 0.20));
+    height: 170px;
+    text-align: center;
+    padding: 60px 0;
+}
+
+
+footer a{
+    color: #33A8DB;
+    font-weight: bold;
+    text-decoration: none;
+}
